--- a/index.html
+++ b/index.html
@@ -23,48 +23,54 @@
 			document.body.insertBefore(clone,null);
 			count = 0;
 		}
-		const output = (input, value) => {
+		const output = (input, value, callback) => {
 			let div = document.createElement('div');
 			switch (input){
 					case 'H': 
-						div.innerHTML = 'Hello, world!';
-						document.body.insertBefore(div,null);
+						callback('Hello, world!');
 						break;
 					case 'Q':
-						div.innerHTML = value;
-						document.body.insertBefore(div,null);
+						callback(value);
 						break;
 					case '9':
 						let text = '99 bottles of beer on the wall<br/>'
-						document.body.insertBefore(div,null);
 						for (let b = 98; b>0; b--){
 							text += b+' bottles of beer!<br/>'
 						}
-						div.innerHTML = text;
-						document.body.insertBefore(div,null);
+						callback(text);
 						break;
 					case '+':
 						let inc = 0;
 						inc++;
 						break;
 					default:
-						div.innerHTML = 'Syntax error';
-						document.body.insertBefore(div,null);
+						callback(0);
 						break;
 				}
 		}
-		document.body.addEventListener('keypress',function(e){
+		document.body.addEventListener('keypress',(e)=>{
 			if (e.code == 'Enter'){
-				let elem = this.querySelector('#cmd');
+				let elem = document.querySelector('#cmd');
 				for (let i = 0; i < elem.value.length; i++) {
-					output(elem.value[i], elem.value);
+					output(elem.value[i], elem.value, (data)=>{
+						if (data == 0){
+							let div = document.createElement('div');
+							div.innerHTML = 'Syntax error';
+							document.body.appendChild(div);
+							return i=elem.value.length;
+						} else {
+							let div = document.createElement('div');
+							div.innerHTML = data;
+							document.body.appendChild(div);
+						}
+					});
 				}
 				clon(elem);
 				document.querySelector('input').focus();
 			}
 		});
 		let count = 0;
-		document.body.addEventListener('keyup',function(e){
+		document.body.addEventListener('keyup',(e)=>{
 			let enter = document.querySelectorAll('.lastCmd');
 			if (enter.length!=0){
 				if (e.keyCode==38){
