many changes (transfer to TS)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div>
                         <span>Команда></span><span class="js-input_command"></span>
                     </div>
-                    <div class="js-answer"></div>
+                    <div class="js-answer css-answer"></div>
                 </div>
                 <label>
                     <span>Команда></span>
